Update PostgreSQL setup notebook

--- a/data/setup/setup_postgres.ipynb
+++ b/data/setup/setup_postgres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b9a34983",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,17 @@
     "import json, psycopg2\n",
     "from psycopg2 import extras\n",
     "\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
     "conn = psycopg2.connect(\n",
-    "    dbname=\"postgres\",\n",
-    "    user=\"postgres\",\n",
-    "    password=\"postgresdata\",\n",
-    "    host=\"postgres-clinical.c1cim40c2d47.us-west-2.rds.amazonaws.com\",\n",
-    "    port=5432,\n",
+    "    dbname=os.getenv(\"DB_NAME\", \"postgres\"),\n",
+    "    user=os.getenv(\"DB_USER\", \"postgres\"), \n",
+    "    password=os.getenv(\"DB_PASSWORD\"),\n",
+    "    host=os.getenv(\"DB_HOST\"),\n",
+    "    port=int(os.getenv(\"DB_PORT\", \"5432\")),\n",
     "    sslmode=\"require\",\n",
     ")\n",
     "conn.autocommit = True\n",
@@ -68,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "77b546bc",
    "metadata": {},
    "outputs": [],
@@ -79,11 +84,11 @@
     "from psycopg2 import extras  # type: ignore[reportMissingImports]\n",
     "\n",
     "conn = psycopg2.connect(\n",
-    "    dbname=\"postgres\",\n",
-    "    user=\"postgres\",\n",
-    "    password=\"postgresdata\",\n",
-    "    host=\"postgres-clinical.c1cim40c2d47.us-west-2.rds.amazonaws.com\",\n",
-    "    port=5432,\n",
+    "    dbname=os.getenv(\"POSTGRES_DB\", \"postgres\"),\n",
+    "    user=os.getenv(\"POSTGRES_USER\", \"postgres\"), \n",
+    "    password=os.getenv(\"POSTGRES_PASSWORD\"),\n",
+    "    host=os.getenv(\"POSTGRES_HOST\"),\n",
+    "    port=int(os.getenv(\"POSTGRES_PORT\", \"5432\")),\n",
     ")\n",
     "\n",
     "# Columns in table order (include everything you expect)\n",
