Update section2 note quality analysis notebook

--- a/section2_note_quality.ipynb
+++ b/section2_note_quality.ipynb
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "49176bdc",
    "metadata": {},
    "outputs": [
@@ -1857,7 +1857,7 @@
     }
    ],
    "source": [
-    "print(json.dumps(doctor_reports, indent=2, sort_keys=True, ensure_ascii=False))"
+    "# print(json.dumps(doctor_reports, indent=2, sort_keys=True, ensure_ascii=False))"
    ]
   },
   {
